--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-pdf": "^5.0.0",
+    "@types/react-router-dom": "^5.1.6",
     "bootstrap": "^4.5.2",
     "jquery": "1.9.1",
+    "mdbreact": "^4.27.0",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-instagram-embed": "^1.5.0",
+    "react-pdf": "^5.0.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "typescript": "^4.0.3"
   },
